# libs

./: CMakeLists.txt  README.md
include/collection/: list_static.h
include/database/: database.h
include/file/: file.h
include/json/: json.h
include/log/: log.h
include/queue/: queue.h
include/semaphore/: semaphore.h
include/server/: server_tcp.h  tcp.h
include/sharedmemory/: sharedmemory.h
include/signal/: signal.h
src/collection/: list_static.c
src/database/: database.c
src/file/: file.c
src/json/: json.c
src/log/: log.c
src/queue/: queue.c
src/semaphore/: semaphore.c
src/server/: server_tcp.c  tcp.c  udp.c
src/sharedmemory/: sharedmemory.c
src/signal/: signal.c
test_lib/: test_list_static.c  test_semaphore.c  test_servertcp.c  test_time_meas.c
